# SpringQL

./: .dockerignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE-MIT  Makefile.toml  MemoryReducingScheduler_yes-Purger_yes.csv  README.md  codecov.yml  coverage_grcov.makefile.toml  deadlinks.expected  deny.toml  pull_request_template.md
foreign-service/: Cargo.toml
foreign-service/src/: lib.rs  sink.rs  source.rs
foreign-service/src/source/: source_input.rs
foreign-service/src/source/source_input/: timed_stream.rs
springql/: Cargo.toml
springql-config/: Cargo.toml
springql-config/src/: lib.rs
springql-configloader/: Cargo.toml
springql-configloader/src/: lib.rs
springql-core/: Cargo.toml  default_config.toml
springql-core/examples/: can_source_reader.rs  demo_pipeline.rs  doc_app1.rs  doc_app2.rs  in_vehicle_pipeline.rs
springql-core/src/: api.rs  connection.rs  expr_resolver.rs  expression.md  expression.rs  http_blocking.rs  lib.md  lib.rs  mem_size.rs  pipeline.md  pipeline.rs  sql_parser.rs  sql_processor.rs  stream_engine.md  stream_engine.rs  stub_http_blocking.rs  time.rs
springql-core/src/api/: error.rs  high_level_rs.rs  low_level_rs.rs  spring_config.rs  spring_pipeline.rs  spring_sink_row.rs  spring_source_row.rs
springql-core/src/api/error/: foreign_info.rs
springql-core/src/api/low_level_rs/: config.rs  engine_mutex.rs  spring_config.rs
springql-core/src/api/spring_source_row/: spring_source_row_builder.rs
springql-core/src/expr_resolver/: expr_label.rs
springql-core/src/expression/: boolean_expression.rs  function_call.rs  module.md  operator.rs
springql-core/src/expression/boolean_expression/: comparison_function.rs  logical_function.rs  numerical_function.rs
springql-core/src/pipeline/: can_source.rs  correlation.rs  expression_to_field.rs  field.rs  foreign_stream_model.rs  name.rs  option.rs  pipeline_graph.rs  pipeline_version.rs  pump_model.rs  relation.rs  server_model.rs  sink_stream_model.rs  sink_writer.rs  sink_writer_model.rs  source_reader.rs  source_reader_model.rs  source_stream_model.rs  stream_model.rs  test_support.rs
springql-core/src/pipeline/can_source/: can_source_stream_columns.rs  can_source_stream_model.rs  can_source_stream_shape.rs
springql-core/src/pipeline/correlation/: aliased_correlation_name.rs
springql-core/src/pipeline/field/: aliased_field_name.rs  field_name.rs  field_pointer.rs
springql-core/src/pipeline/option/: can_options.rs  http11_client_options.rs  http1_client_options.rs  in_memory_queue_options.rs  in_memory_queue_server_options.rs  net_client_options.rs  net_options.rs  net_protocol.rs  net_server_options.rs  options_builder.rs  sink_net_client_options.rs  source_net_client_options.rs
springql-core/src/pipeline/pipeline_graph/: edge.rs  poc_beam_graph.rs  stream_node.rs
springql-core/src/pipeline/pump_model/: pump_input_type.rs  pump_state.rs  window_operation_parameter.rs  window_parameter.rs
springql-core/src/pipeline/relation/: column.rs  sql_type.rs
springql-core/src/pipeline/server_model/: server_state.rs  server_type.rs
springql-core/src/pipeline/sink_writer/: sink_writer_type.rs
springql-core/src/pipeline/sink_writer_model/: sink_writer_type.rs
springql-core/src/pipeline/source_reader/: source_reader_state.rs  source_reader_type.rs
springql-core/src/pipeline/source_reader_model/: source_reader_type.rs
springql-core/src/pipeline/stream_model/: can_source_stream_model.rs  stream_shape.rs
springql-core/src/pipeline/test_support/: factory.rs  fixture.rs
springql-core/src/sql_parser/: pest_parser_impl.rs
springql-core/src/sql_processor/: query_planner.rs  sql_parser.rs
springql-core/src/sql_processor/query_planner/: select_syntax_analyzer.rs
springql-core/src/sql_processor/sql_parser/: parse_success.rs  pest_parser_impl.rs  syntax.rs
springql-core/src/stream_engine/: autonomous_executor.rs  command.rs  dependency_injection.rs  in_memory_queue_repository.rs  module.md  reactive_executor.rs  sql_executor.rs  time.rs
springql-core/src/stream_engine/autonomous_executor/: args.rs  current_pipeline.rs  event_queue.rs  latest_pipeline.rs  main_job_lock.rs  memory_state_machine.rs  memory_state_machine_worker.rs  performance_metrics.rs  performance_monitor_worker.rs  pipeline_derivatives.rs  purger_worker.rs  queue.rs  repositories.rs  row.rs  scheduler.rs  server_instance.rs  task.rs  task_executor.rs  task_graph.rs  test_support.rs  worker.rs  worker_pool.rs
springql-core/src/stream_engine/command/: alter_pipeline_command.rs  insert_as_plan.rs  insert_plan.rs  query_plan.rs
springql-core/src/stream_engine/dependency_injection/: prod_di.rs  test_di.rs
springql-core/tests/: e2e_high_level_rs.rs  e2e_low_level_rs.rs  e2e_row_level_rs.rs  e2e_sampling.rs  feat_aggregate_ops.rs  feat_aggregation.rs  feat_error.rs  feat_join.rs  feat_logical_ops.rs  feat_numerical_ops.rs  feat_performance_metrics_report.rs  feat_pipeline.rs  feat_processing_time.rs  feat_projection.rs  feat_purger.rs  feat_spring_open_twice.rs  feat_timestamp_ops.rs  feat_worker_config.rs
springql-core/tests/test_support/: mod.rs  request_body.rs
springql/examples/: can_source_reader.rs  cpu_usage.rs  doc_app1.rs  doc_app2.rs  http_client_sink_writer.rs  in_memory.rs  in_vehicle_pipeline.rs
springql/src/: config.rs  lib.md  lib.rs
springql/src/config/: default.rs
springql/tests/: e2e_connect_2_pipelines.rs  e2e_high_level_rs.rs  e2e_replayman_aggr_join_split.rs  e2e_sampling.rs  feat_aggregation.rs  feat_error.rs  feat_join.rs  feat_logical_ops.rs  feat_numerical_ops.rs  feat_performance_metrics_report.rs  feat_pipeline.rs  feat_processing_time.rs  feat_projection.rs  feat_purger.rs  feat_source_row.rs  feat_spring_open_twice.rs  feat_timestamp_ops.rs  feat_worker_config.rs
springql/tests/test_support/: mod.rs  request_body.rs
test-logger/: Cargo.toml
test-logger/src/: lib.rs
test-web-console-mock/: Cargo.toml
test-web-console-mock/src/: builder.rs  handlers.rs  lib.rs  request_body.rs  request_handler.rs
(+490 files in other folders)
