[package]
authors = ["Sho Nakatani <lay.sakura@gmail.com>"]
license = "TBD"
name = "springql-core"
version = "0.1.0"

edition = "2021"

[dependencies]
anyhow = "1.0"
thiserror = "1.0"

chrono = "0.4"

serde = {version = "1.0", features = ["derive", "rc"]}
serde_json = "1.0"

derive-new = "0.5"

fastrand = "1.5"

env_logger = "0.9"
log = "0.4"

petgraph = {version = "0.6", features = ["serde-1"]}

once_cell = "1.8"

[dev-dependencies]
regex = "1.5"
