[package]
name = "springql-foreign-service"
version = "0.2.0"

authors = ["Sho Nakatani <lay.sakura@gmail.com>"]
license = "MIT OR Apache-2.0"

edition = "2021"

categories = ["development-tools"]
description = "Foregin Sources / Sinks for SpringQL"
documentation = "https://docs.rs/springql-foreign-service"
keywords = ["springql"] # up to 5 keywords, each keyword should have <= 20 chars
repository = "https://github.com/SpringQL/SpringQL"

[dependencies]
anyhow = "^1.0"

serde_json = "1.0"

env_logger = "0.9"
log = "0.4"

chrono = "0.4"

csv = "1.1"
