[package]
name = "springql-foreign-service"
version = "0.4.0"

authors = ["Sho Nakatani <lay.sakura@gmail.com>"]
license = "MIT OR Apache-2.0"

edition = "2021"

publish = false

[dependencies]
anyhow = "^1.0"
serde_json = "1.0"
env_logger = "0.9"
log = "0.4"
csv = "1.1"
time = {version="0.3.9", features = ["formatting", "parsing", "macros"]}