[package]
name = "springql-configloader"
version = "0.17.1"
edition = "2021"
authors = ["Sho Nakatani <lay.sakura@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/SpringQL/SpringQL"
keywords = ["springql", "stream-processing"] # up to 5 keywords, each keyword should have <= 20 chars

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0", features = ["derive"], default-features = false}
config = {version = "0.13", features = ["toml"], default-features = false}
