[package]
name = "springql-core"
version = "0.3.0"

authors = ["Sho Nakatani <lay.sakura@gmail.com>"]
license = "MIT OR Apache-2.0"

edition = "2021"

categories = ["embedded"]
description = "SpringQL: Open-source stream processor for IoT devices and in-vehicle computers"
documentation = "https://docs.rs/springql-core"
keywords = ["springql", "stream-processing"] # up to 5 keywords, each keyword should have <= 20 chars
readme = "../README.md"
repository = "https://github.com/SpringQL/SpringQL"

[dependencies]
anyhow = "1.0"
thiserror = "1.0"

chrono = "0.4"

serde = {version = "1.0", features = ["derive", "rc"]}
serde_json = "1.0"

config = {version = "0.11", features = ["toml"]}

derive-new = "0.5"

ordered-float = "2.10"

fastrand = "1.5"
rand = {version = "0.8", features = ["small_rng"]}

env_logger = "0.9"
log = "0.4"
log-panics = {version = "2.0", features = ["with-backtrace"]}

petgraph = {version = "0.6", features = ["serde-1"]}

pest = "2.1"
pest_derive = "2.1"

reqwest = {version = "0.11", features = ["json", "blocking"]}

once_cell = "1.8"

[dev-dependencies]
springql-foreign-service = {path = "../foreign-service"}
springql-test-logger = {path = "../test-logger"}
springql-test-web-console-mock = {path = "../test-web-console-mock"}

pretty_assertions = "1.0"

regex = "1.5"

float-cmp = "0.9"

tempfile = "3.3"
