[package]
name = "springql-core"
version = "0.4.1"

authors = ["Sho Nakatani <lay.sakura@gmail.com>"]
license = "MIT OR Apache-2.0"

edition = "2021"

categories = ["embedded"]
description = "SpringQL: Open-source stream processor for IoT devices and in-vehicle computers"
documentation = "https://docs.rs/springql-core"
keywords = ["springql", "stream-processing"] # up to 5 keywords, each keyword should have <= 20 chars
readme = "../README.md"
repository = "https://github.com/SpringQL/SpringQL"

[dependencies]
anyhow = "1.0"
thiserror = "1.0"

chrono = {version = "0.4", features = ["alloc", "std"], default-features = false}

serde = {version = "1.0", features = ["derive"], default-features = false}
serde_json = "1.0"

derive-new = "0.5"

ordered-float = "2.10"

fastrand = "1.5"

env_logger = "0.9"
log = "0.4"

petgraph = "0.6"

once_cell = "1.8"

parking_lot = "0.12"

[dev-dependencies]
reqwest = {version = "0.11", features = ["json", "blocking"], default-features = false}

springql-foreign-service = {path = "../foreign-service"}
springql-test-logger = {path = "../test-logger"}
springql-test-web-console-mock = {path = "../test-web-console-mock"}

pretty_assertions = "1.0"

regex = "1.5"

float-cmp = "0.9"

tempfile = "3.3"
