[package]
name = "springql-core-release-test"
version = "1.0.0-a1"

authors = ["Sho Nakatani <lay.sakura@gmail.com>"]
license = "MIT OR Apache-2.0"

edition = "2021"
rust-version = "1.57.0"

categories = ["embedded"]
description = "SpringQL: Open-source stream processor for IoT devices and in-vehicle computers"
documentation = "https://springql.github.io/"
keywords = ["springql", "stream-processing"] # up to 5 keywords, each keyword should have <= 20 chars
readme = "../README.md"
repository = "https://github.com/SpringQL/SpringQL"

[features]
stub_web_console=[]

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
serde = {version = "1.0", features = ["derive"], default-features = false}
serde_json = "1.0"
config = {version = "0.13", features = ["toml"], default-features = false}
derive-new = "0.5"
ordered-float = "3.0"
fastrand = "1.5"
rand = {version = "0.8", features = ["small_rng"]}
env_logger = "0.9"
log = "0.4"
log-panics = {version = "2.0", features = ["with-backtrace"]}
petgraph = "0.6"
pest = "2.1"
pest_derive = "2.1"
reqwest = {version = "0.11", features = ["json", "blocking"], default-features = false}
once_cell = "1.8"
parking_lot = "0.12"
time = {version="0.3.9", features = ["formatting", "parsing", "macros"]}

socketcan = "1.7"

[dev-dependencies]
springql-foreign-service = {path = "../foreign-service"}
springql-test-logger = {path = "../test-logger"}
pretty_assertions = "1.0"
regex = "1.5"
float-cmp = "0.9"
tempfile = "3.3"
serde_derive = "1.0"
