[package]
name = "springql-release-test"
version = "1.0.0-a1"

authors = ["Sho Nakatani <lay.sakura@gmail.com>"]
license = "MIT OR Apache-2.0"

edition = "2021"

categories = ["embedded"]
description = "SpringQL: Open-source stream processor for IoT devices and in-vehicle computers"
documentation = "https://springql.github.io/"
keywords = ["springql", "stream-processing"] # up to 5 keywords, each keyword should have <= 20 chars
readme = "../README.md"
repository = "https://github.com/SpringQL/SpringQL"

[dependencies]
springql-core-release-test =  { version = "1.0.0-a1", path="../springql-core"}

[dev-dependencies]
springql-foreign-service = {path = "../foreign-service"}
springql-test-logger = {path = "../test-logger"}
pretty_assertions = "1.0"
regex = "1.5"
float-cmp = "0.9"
tempfile = "3.3"
rand = {version = "0.8", features = ["small_rng"]}
serde = {version = "1.0", features = ["derive"], default-features = false}
serde_json = "1.0"
env_logger = "0.9"
reqwest = {version = "0.11", features = ["json", "blocking", "default-tls"], default-features = false}
log = "0.4"
time = {version="0.3.9", features = ["formatting", "parsing", "macros"]}
