[package]
name = "springql-test-logger"
version = "0.1.0"

authors = ["Sho Nakatani <lay.sakura@gmail.com>"]
license = "MIT OR Apache-2.0"

edition = "2021"

categories = ["development-tools"]
description = "Logger for #[cfg(test)] in SpringQL"
documentation = "https://docs.rs/springql-test-logger"
keywords = ["springql"] # up to 5 keywords, each keyword should have <= 20 chars
repository = "https://github.com/SpringQL/SpringQL"

[dependencies]
env_logger = "0.9"
log = "0.4"
