[package]
name = "springql-test-web-console-mock"
version = "0.4.0"

authors = ["Sho Nakatani <lay.sakura@gmail.com>"]
license = "MIT OR Apache-2.0"

edition = "2021"

publish = false

[dependencies]
simple-server = {git = "https://github.com/laysakura/simple-server"}

serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

reqwest = "0.11"

env_logger = "0.9"
log = "0.4"
